--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -122,6 +122,7 @@ jobs:
 
         #cleanup only keep last 5 releases
       - uses: dev-drprasad/delete-older-releases@v0.3.2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           keep_latest: 5
         env:
