--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -121,7 +121,8 @@ jobs:
             target/CoC-debug.swf
 
         #cleanup only keep last 5 releases
-      - uses: dev-drprasad/delete-older-releases@v0.3.2
+      - name: cleanup older releases
+        uses: dev-drprasad/delete-older-releases@v0.3.2
         if: startsWith(github.ref, 'refs/tags/')
         with:
           keep_latest: 5
