--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -120,11 +120,22 @@ jobs:
             target/CoC-release.swf
             target/CoC-debug.swf
 
-        #cleanup only keep last 5 releases
-      - name: cleanup older releases
+        #cleanup only keep last 5 true releases
+      - name: cleanup older true releases
         uses: dev-drprasad/delete-older-releases@v0.3.2
         if: startsWith(github.ref, 'refs/tags/')
         with:
           keep_latest: 5
+          delete_tag_pattern: ^(?!.*-beta$).*$
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+        #cleanup only keep last 5 beta releases
+      - name: cleanup older beta releases
+        uses: dev-drprasad/delete-older-releases@v0.3.2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          keep_latest: 5
+          delete_tag_pattern: .*-beta$
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
