--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -107,35 +107,35 @@ jobs:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
         continue-on-error: true
 
-      - name: Release step
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          generate_release_notes: true
-          files: |
-            target/CoC-Mobile-Beta-32bit.apk
-            target/CoC-Mobile-Beta-64bit.apk
-            target/CoC-Mobile-Release-32bit.apk
-            target/CoC-Mobile-Release-64bit.apk
-            target/CoC-release.swf
-            target/CoC-debug.swf
-
-        #cleanup only keep last 5 true releases
-      - name: cleanup older true releases
-        uses: dev-drprasad/delete-older-releases@v0.3.2
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          keep_latest: 5
-          delete_tag_pattern: ^(?!.*-beta$).*$
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-        #cleanup only keep last 5 beta releases
-      - name: cleanup older beta releases
-        uses: dev-drprasad/delete-older-releases@v0.3.2
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          keep_latest: 5
-          delete_tag_pattern: .*-beta$
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Release step
+#        uses: softprops/action-gh-release@v1
+#        if: startsWith(github.ref, 'refs/tags/')
+#        with:
+#          generate_release_notes: true
+#          files: |
+#            target/CoC-Mobile-Beta-32bit.apk
+#            target/CoC-Mobile-Beta-64bit.apk
+#            target/CoC-Mobile-Release-32bit.apk
+#            target/CoC-Mobile-Release-64bit.apk
+#            target/CoC-release.swf
+#            target/CoC-debug.swf
+#
+#        #cleanup only keep last 5 true releases
+#      - name: cleanup older true releases
+#        uses: dev-drprasad/delete-older-releases@v0.3.2
+#        if: startsWith(github.ref, 'refs/tags/')
+#        with:
+#          keep_latest: 5
+#          delete_tag_pattern: ^(?!.*-beta$).*$
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#
+#        #cleanup only keep last 5 beta releases
+#      - name: cleanup older beta releases
+#        uses: dev-drprasad/delete-older-releases@v0.3.2
+#        if: startsWith(github.ref, 'refs/tags/')
+#        with:
+#          keep_latest: 5
+#          delete_tag_pattern: .*-beta$
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
